# pubky-node

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.sample.toml
.agents/workflows/: deploy-changes.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
scripts/: build-sidecars.sh
src/: backup.rs  config.rs  dashboard.css  dashboard.html  dashboard.js  dashboard.rs  dns.rs  embedded_pg.rs  homeserver.rs  identity.rs  keyvault.rs  layout.rs  main.rs  migration.rs  publisher.rs  relay.rs  tunnel.rs  upnp.rs  watchlist.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-ui/: index.html
src/api/: auth.rs  backup.rs  homeserver.rs  identity.rs  keys.rs  layout.rs  migration.rs  mod.rs  network.rs  profile.rs  quickstart.rs  reachability.rs  state.rs  tunnel.rs  vault.rs  watchlist.rs
src/cli/: backup.rs  dns_setup.rs  dns_tunnel.rs  helpers.rs  homeserver.rs  identity.rs  keygen.rs  migration.rs  mod.rs  node.rs  profile.rs  proxy_hosts.rs  publish.rs  relay_tunnel.rs  resolve.rs  status.rs  tunnel.rs  vanity.rs  vault.rs  watchlist.rs
umbrel/: README.md  umbrel-app-store.yml
umbrel/pubky-node/: docker-compose.yml  exports.sh  umbrel-app.yml
