[package]
name = "pubky-node"
version = "0.2.0"
edition = "2021"
description = "A unified sovereign network participant for the Pubky ecosystem"
license = "MIT"

[dependencies]
# Core Pubky dependencies (local paths)
pkarr-relay = { path = "../pkarr/relay" }
pkarr = { path = "../pkarr/pkarr", default-features = false, features = ["dht", "lmdb-cache"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP server for dashboard
axum = "0.8"
serde_json = "1"

# CLI and config
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs-next = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# HTTP client for CLI status command
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# CPU detection for vanity grinder
num_cpus = "1"



# Hex encoding for secret keys
hex = "0.4"

# Secure memory zeroization for secret keys
zeroize = "1"

# Password hashing for dashboard auth
argon2 = "0.5"

# Base64 for HTTP Basic Auth
base64 = "0.22"

# Encrypted key vault (chacha20-poly1305 AEAD)
chacha20poly1305 = "0.10"

# UUID for key identifiers
uuid = { version = "1", features = ["v4"] }

# Random number generation for salts/nonces
rand = "0.8"

# UPnP auto-port-forwarding
igd-next = { version = "0.15", features = ["aio_tokio"] }

# Unix signals for subprocess management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
