[package]
name = "pubky-node-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop app for Pubky Node"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "pubky_node_desktop"
crate-type = ["lib", "cdylib", "staticlib"]
